--- a/punchclock/src/main/resources/META-INF/resources/index.html
+++ b/punchclock/src/main/resources/META-INF/resources/index.html
@@ -25,6 +25,7 @@
                     <th>ID</th>
                     <th>Check in</th>
                     <th>Check out</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody id="entryDisplay">
