--- a/punchclock/src/main/resources/META-INF/resources/index.html
+++ b/punchclock/src/main/resources/META-INF/resources/index.html
@@ -18,6 +18,8 @@
             <input type="date" name="checkOutDate" id="checkOut" required>
             <input type="time" name="checkOutTime" required>
             <input type="submit" value="Save" />
+            <label for="category">Category</label>
+            <select name="category" id="category"></select>
         </form>
         <table>
             <thead>
