feat punchclock: add tag multiselect

--- a/punchclock/src/main/resources/META-INF/resources/index.html
+++ b/punchclock/src/main/resources/META-INF/resources/index.html
@@ -17,9 +17,11 @@
             <label for="checkOut">Check out</label>
             <input type="date" name="checkOutDate" id="checkOut" required>
             <input type="time" name="checkOutTime" required>
-            <input type="submit" value="Save" />
             <label for="category">Category</label>
             <select name="category" id="category"></select>
+            <label for="tags">Tags</label>
+            <select name="tags" id="tags" multiple></select>
+            <input type="submit" value="Save" />
         </form>
         <table>
             <thead>
